# fyi-archive

./: .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .vale.ini  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DATASET_CARD.md  LICENSE  Makefile  NOTICE.md  README.md  RELEASE_NOTES.md  SECURITY.md  VERSION  _typos.toml  codecov.yml  pyproject.toml  pyrightconfig.json  release-please-config.json  renovate.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: instance-onboarding.yml
.github/styles/Edithatogo/: Placeholders.yml
.github/workflows/: alaveteli_historical_all_captures.yml  alaveteli_historical_core.yml  alaveteli_historical_indexes.yml  alaveteli_working_sites.yml  all_instance_historical_indexes.yml  all_instance_historical_indexes_matrix.yml  archive_health_monitor.yml  au_jurisdiction_rollout.yml  au_nsw_historical_seed.yml  automated_historical_backfill.yml  capture_au_fulltext.yml  capture_au_historical_source.yml  ci-learning-candidates.yml  code_quality.yml  codeql.yml  dependency-freshness.yml  docs.yml  foi_site_internet_archive.yml  hf_metadata.yml  hf_sync.yml  historical_backfill_batch.yml  historical_seed.yml  historical_source_indexes.yml  merge_backfill_artifacts.yml  mirror_sync.yml  mutation.yml  nz_historical_source_indexes.yml  preserve-foi-process-zenodo.yml  project_sync.yml  publish_archives.yml  publish_historical_archives.yml  publish_process_projection.yml  python-canary.yml  release.yml  scorecard.yml  sign_release_artifacts.yml  test_harness.yml  tests.yml  validate_metadata.yml  validate_secrets.yml  (+1 more)
conductor/: credential_inventory.json  design.md  improvement-backlog.md  initial-concept.md  learning-log.md  live_seed_smoke.json  maturity-checklist.md  operations_status.json  product-guidelines.md  product.md  quality-maintenance-checklist.md  registry_evidence.json  requirements.md  setup_state.json  tech-stack.md  tracks.md  workflow.md
conductor/archive/cross_worker_rate_limiter_20260701/: index.md  metadata.json  plan.md  spec.md
conductor/archive/github_project_best_practices_20260701/: index.md  metadata.json  plan.md  spec.md
conductor/code_styleguides/: README.md
conductor/tracks/alaveteli_sitewide_queue_20260713/: metadata.json  plan.md  spec.md
configs/: additional_foi_archive_sites.json  jurisdiction_archive_targets.json
configs/au/: corpus_sampling_frame.json  jurisdiction_rollout.json  jurisdiction_rollout_empirical_pilot.json  jurisdiction_rules.json
configs/historical/: internet_archive_sources.json
docs/: README.md  au-corpus-readiness.md  backfill-ops-runbook.md  copyright-and-licensing.md  dataset-card-au-rtk.md  dependency-freshness.md  derived-layer.md  ethics-and-compliance.md  github-projects-operating-model.md  historical-seed-runbook.md  historical-source-import.md  instance-onboarding-english.md  instance-onboarding-global.md  jurisdiction-archive-status.md  quality-profile.md  registry-readiness.md  separate-foi-site-archives.md  sigstore-signing.md  working-alaveteli-sites.md
manifests/: .gitkeep
schemas/: authorities-au.schema.json  changes.schema.json  foi-o-derived-manifest.schema.json  internet-archive-source-registry.schema.json  manifest.schema.json
scripts/: __init__.py  audit_credentials.py  backfill_state.py  build_historical_archive_manifest.py  build_internet_archive_matrix.py  capture_historical_fulltext.py  check_politeness_defaults.py  check_registry_readiness.py  check_version_consistency.py  discover_nsw_requests.py  enrich_historical_core.py  fetch_complete_internet_archive_cdx.py  fetch_internet_archive_cdx.py  filter_historical_request_pages.py  gen_provenance.py  gen_sbom.py  import_historical_sources.py  manage_alaveteli_queue.py  plan_auto_backfill.py  plan_backfill_chunks.py  probe_alaveteli_feeds.py  rebuild_backfill_state.py  reconcile_source_candidates.py  record_learning_candidate.py  render_dataset_card.py  run_au_live_rollout.py  run_au_rollout_controller.py  sync_github_projects.py  update_citation_doi.py  validate_secrets.py
src/fyi_archive/: __init__.py  au_corpus_readiness.py  backfill_state_codec.py  backfill_verification.py  body_discovery.py  catalog_fallback.py  cli.py  dataset_card.py  derived_layer.py  derived_publication.py  foi_o_capabilities.py  health.py  historical_core.py  historical_sources.py  instances.py  internet_archive_cdx.py  internet_archive_registry.py  internet_archive_sites.py  jurisdiction_archive.py  jurisdictions.py  manifest.py  nsw_seed.py  process_projection.py  rollout.py  seed.py  sync.py  version.py
tests/: test_alaveteli_queue.py  test_au_corpus_readiness.py  test_au_live_workflow_contracts.py  test_backfill_state.py  test_backfill_verification.py  test_body_discovery.py  test_build_historical_archive_manifest.py  test_capture_historical_fulltext.py  test_catalog_fallback.py  test_derived_layer.py  test_derived_publication.py  test_extended_harness.py  test_feed_probe.py  test_fetch_complete_internet_archive_cdx_script.py  test_fetch_internet_archive_cdx.py  test_filter_historical_request_pages.py  test_foi_o_capabilities.py  test_foio_extraction_contract.py  test_fyi_cli_version.py  test_gen_provenance.py  test_harness_contract.py  test_health.py  test_historical_core.py  test_historical_source_indexes_workflow.py  test_historical_sources.py  test_hypothesis.py  test_instances.py  test_internet_archive_cdx.py  test_internet_archive_registry.py  test_internet_archive_sites.py  test_internet_archive_workflows.py  test_jurisdiction_archive.py  test_jurisdictions.py  test_manifest.py  test_plan_auto_backfill.py  test_plan_backfill_chunks.py  test_process_projection.py  test_process_readiness_commands.py  test_publish_adapters.py  test_publish_evidence.py  (+17 more)
tests/fixtures/: alaveteli_request.html  au_jurisdiction_tags.json  au_nsw_bodies.json  foi_o_extraction_contract_nz.json
versions/: latest_backfill_controller_state.json  latest_backfill_state.json
versions/2026-06/: mirror_verification.json
versions/2026-07/: backfill_verification.json  mirror_verification.json
(+129 files in other folders)
